--- a/index.html
+++ b/index.html
@@ -3,19 +3,39 @@
   <head>
     <meta charset="utf-8">
     <title>Información de Películas</title>
+    <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
+
+    <nav class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">Información</a>
+          </div>
+        </div>
+    </nav>
+
     <div class="container">
     	<div class="jumbotron">
-	    	<h3 class="text-center">Buscar Películas</h3>
-	    	<form id="searchForm">
-	    		<input type="text" class="form-control" id="searchText" placeholder="Search Movies...">
+	    	<h3 class="text-center">Busqueda de Películas</h3>
+	    	<form id="buscador">
+	    		<input type="text" class="form-control" id="buscTXT" placeholder="Buscar Peliculas...">
 	    	</form>
 	    </div>
     </div>
 
     <div class="container">
-      <div id="movies" class="row"></div>
+      <div id="peliculas" class="row"></div>
     </div>
+
+    <script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="js/funciones.js"></script>
+
   </body>
 </html>
