Orndeano por carptas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     	<div class="jumbotron">
 	    	<h3 class="text-center">Busqueda de Películas</h3>
 	    	<form id="buscador">
-	    		<input type="text" class="form-control" id="buscTXT" placeholder="Buscar Peliculas...">
+	    		<input type="text" class="form-control" id="buscTXT" placeholder="Buscar Películas...">
 	    	</form>
 	    </div>
     </div>
