--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">Información</a>
+            <a class="navbar-brand" href="index.html">Inicio</a>
           </div>
         </div>
     </nav>
