--- a/pelicula.html
+++ b/pelicula.html
@@ -17,18 +17,18 @@
     </nav>
 
     <div class="container">
-      <div id="pelicula" class="well"></div>
+      <div id="peli" class="well"></div>
     </div>
 
     <script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous">
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous">
     </script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/funciones.js"></script>
     <script>
-        getPeli();
+        getPelicula();
     </script>
   </body>
 </html>
