--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     </script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/funciones.js"></script>
-
+    <script>getPelisID()</script>
   </body>
 </html>
