Faltan ultimos detalles

--- a/pelicula.html
+++ b/pelicula.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Información de Películas</title>
-    <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
