--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container">
     	<div class="jumbotron">
-	    	<h3 class="text-center">Busqueda de Películas</h3>
+	    	<h3 class="text-center">Información de Películas</h3>
 	    	<form id="buscador">
 	    		<input type="text" class="form-control" id="buscTXT" placeholder="Buscar Películas...">
 	    	</form>
