--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
       <div id="peliculas" class="row"></div>
     </div>
 
+    <div class="container">
+    	<div class="jumbotron">
+	    	<h3 class="text-center">Información de Películas</h3>
+	    	<form id="buscadorid">
+	    		<input type="text" class="form-control" id="buscID" placeholder="Buscar por ID...">
+	    	</form>
+	    </div>
+    </div>
+
+    <div class="container">
+      <div id="peliculasid" class="well"></div>
+    </div>
+
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
